package com.xjtu.iron.message.demo;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class MessageDemoApplication {

    public static void main(String[] args) {
        SpringApplication.run(MessageDemoApplication.class, args);
    }
}
